--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,6 +10,7 @@
 
     <meta property="og:title" content="Kirill - Student & Technology Enthusiast" />
     <meta property="og:description" content="Portfolio of Kirill - Passionate student exploring the intersection of technology and creativity" />
+    <meta name="google-site-verification" content="oVunQn5vYuW7-kgJbhZUEDZYmMhm_pmPRwUhDlRw_0A" />
 
     <meta name="twitter:card" content="summary_large_image" />
   </head>
